--- a/src/components/Graph/ui/Graph.css
+++ b/src/components/Graph/ui/Graph.css
@@ -57,12 +57,61 @@
 
 .loading {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 100%;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
 }
 
-.loading img {
-  width: 50px;
-  height: 50px;
+.loading-icon {
+  margin-top: 35px;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.loading-circle {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.rotating-image {
+  width: 120px;
+  height: 120px;
+  animation: rotate 2s linear infinite;
+  opacity: 0.8;
+}
+
+/* @keyframes rotate {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+} */
+
+.loading-text {
+  text-align: center;
+}
+
+.progress-bar {
+  width: 80%;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 2px;
+  overflow: hidden;
+  margin-top: 8px;
+}
+
+.progress {
+  height: 100%;
+  background-color: #9b59b6;
+  transition: width 0.5s;
 }
